# Learn_CUDA

./: .gitignore  CMake.txt  CMakeLists.txt  README.md
1_check_dimension/: check_dimension.cu
2_grid_block/: grid_block.cu
3_sum_arrays/: sum_arrays.cu
6_sum_matrix/: sum_matrix.cu
8_divergence/: divergence.cu
9_sum_matrix2D/: sum_matrix2D.cu
ECE408/: CMakeLists.txt  lec_3.cu  lec_5.cu  mat_mul.cu
PMPP/: 3-9-8.cpp  CMakeLists.txt  blurKernel.cu
PMPP/ch3/: CMakeLists.txt  color2grey.cu
cuda_freshman/: 0_hello_world.cu  10_reduceInteger.cu  12_reduceUnrolling.cu  14_global_variable.cu  15_pine_memory.cu  16_zero_copy_memory.cu  17_UVA.cu  18_sum_array_offset.cu  19_AoS.cu  20_SoA.cu  21_sum_array_offset_unrolling.cu  22_transform_matrix2D.cu  23_sum_arrays_uniform_memory.cu  24_shared_memory_read_data.cu  25_reduce_integer_shared_memory.cu  26_transform_shared_memory.cu  27_stencil_1d_constant_read_only.cu  28_shfl_test.cu  29_reduce_shfl.cu  31_stream_omp.cu  32_stream_resource.cu  33_stream_block.cu  34_stream_dependence.cu  35_multi_add_depth.cu  36_multi_add_breadth.cu  37_asyncAPI.cu  38_stream_call_back.cu  4_sum_arrays_timer.cu  5_thread_index.cu  8_divergence.cu  9_sum_matrix2D.cu  CMakeLists.txt  nested_Hello_World  nested_Hello_World.cu
cuda_training_series/: CMakeLists.txt  hw4_matrix_sums.cu  hw5_matrix_sums.cu  readme.txt  stencil_1d.cu  vector_add.cu
cuda_training_series/Nsight Compute/: matrix_square.ncu-rep  test1  test1.cu
cuda_training_series/bank_confict/: CMakeLists.txt  bank-conflicts.cu  bank_confit.cu  shared_memory_read_data.cu  test.cpp
cuda_training_series/hw1/: CMakeLists.txt  hello.cu  matrix_mul.cu  vector_add.cu
include/: common.h
maolei_cuda/: CMakeLists.txt  readme.txt  template_cuda.cu  template_shaded.cu
ops/: CMakeLists.txt
ops/LayerNorm/: CMakeLists.txt  layernorm_forward.cu
ops/reduce/: CMakeLists.txt  reduce.cu  reduce_atomic.cu  reduce_parallel.cu  reduce_static.cu  reduce_warp.cu  reduction.cu  test.cpp
ops/sgemm/: CMakeLists.txt
pytorch_cuda/pytorch/: CMakeLists.txt  add2_ops.cpp  setup.py  time.py
