add_executable(cuda_freshman_0_hello_world 0_hello_world.cu)
add_executable(cuda_freshman_1_check_dimension 1_check_dimension.cu)
add_executable(cuda_freshman_2_grid_block 2_grid_block.cu)
add_executable(cuda_freshman_3_sum_arrays 3_sum_arrays.cu)
add_executable(cuda_freshman_4_sum_arrays_timer 4_sum_arrays_timer.cu)
add_executable(cuda_freshman_5_thread_index 5_thread_index.cu)
add_executable(cuda_freshman_6_sum_matrix 6_sum_matrix.cu)
add_executable(cuda_freshman_7_device_information 7_device_information.cu)
add_executable(cuda_freshman_8_divergence 8_divergence.cu)
add_executable(cuda_freshman_9_sum_matrix2D 9_sum_matrix2D.cu)
add_executable(cuda_freshman_10_reduceInteger 10_reduceInteger.cu)

add_executable(cuda_freshman_12_reduceUnrolling 12_reduceUnrolling.cu)
#add_executable(cuda_freshman_13_nested_Hello_World 13_nested_Hello_World.cu)
add_executable(cuda_freshman_14_global_variable 14_global_variable.cu)
add_executable(cuda_freshman_15_pine_memory 15_pine_memory.cu)
add_executable(cuda_freshman_16_zero_copy_memory 16_zero_copy_memory.cu)
add_executable(cuda_freshman_17_UVA 17_UVA.cu)
add_executable(cuda_freshman_18_sum_array_offset 18_sum_array_offset.cu)
add_executable(cuda_freshman_19_AoS 19_AoS.cu)
add_executable(cuda_freshman_20_SoA 20_SoA.cu)
add_executable(cuda_freshman_21_sum_array_offset_unrolling 21_sum_array_offset_unrolling.cu)
add_executable(cuda_freshman_22_transform_matrix2D 22_transform_matrix2D.cu)
add_executable(cuda_freshman_23_sum_arrays_uniform_memory 23_sum_arrays_uniform_memory.cu)
add_executable(cuda_freshman_24_shared_memory_read_data 24_shared_memory_read_data.cu)
add_executable(cuda_freshman_25_reduce_integer_shared_memory 25_reduce_integer_shared_memory.cu)
add_executable(cuda_freshman_26_transform_shared_memory 26_transform_shared_memory.cu)
add_executable(cuda_freshman_27_stencil_1d_constant_read_only 27_stencil_1d_constant_read_only.cu)
add_executable(cuda_freshman_28_shfl_test 28_shfl_test.cu)
add_executable(cuda_freshman_29_reduce_shfl 29_reduce_shfl.cu)
add_executable(cuda_freshman_30_stream 30_stream.cu)
#add_executable(cuda_freshman_31_stream_omp 31_stream_omp.cu)
add_executable(cuda_freshman_32_stream_resource 32_stream_resource.cu)
add_executable(cuda_freshman_33_stream_block 33_stream_block.cu)
add_executable(cuda_freshman_34_stream_dependence 34_stream_dependence.cu)
add_executable(cuda_freshman_35_multi_add_depth 35_multi_add_depth.cu)
add_executable(cuda_freshman_36_multi_add_breadth 36_multi_add_breadth.cu)
add_executable(cuda_freshman_37_asyncAPI 37_asyncAPI.cu)
add_executable(cuda_freshman_38_stream_call_back 38_stream_call_back.cu)

